# serial-port-lib

./: CMakeLists.txt  README.md
cmake/: SerialPortConfig.cmake.in
src/: CMakeLists.txt  serialport.cpp  serialport.hpp
